--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
+ruff = "^0.9.4"
 
+[tool.ruff.lint]
+select = ["E", "F", "UP", "B", "SIM", "I"]
+ignore = ["F401"]
