--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
 ruff = "^0.9.4"
+mypy = "^1.14.1"
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
 ignore = ["F401"]
+
+[tool.mypy]
+strict = true
