--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ build-backend = "poetry.core.masonry.api"
 pre-commit = "^4.1.0"
 ruff = "^0.9.4"
 mypy = "^1.14.1"
+py-mon = "^2.0.5"
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
