--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,4 +17,5 @@ repos:
     rev: "v1.14.1"
     hooks:
       - id: mypy
-        args: [--strict, --ignore-missing-imports]
+        additional_dependencies: ["sqlalchemy"]
+        args: ["--config-file=pyproject.toml"]
