--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires-python = ">=3.13"
 dependencies = [
     "aiogram (>=3.17.0,<4.0.0)",
     "sqlalchemy (>=2.0.37,<3.0.0)",
-    "pymysql (>=1.1.1,<2.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
+    "aiomysql (>=0.2.0,<0.3.0)",
 ]
 
 
