--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "sqlalchemy (>=2.0.37,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
     "aiomysql (>=0.2.0,<0.3.0)",
+    "cryptography (>=44.0.0,<45.0.0)",
 ]
 
 
