--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
+MYSQL_ROOT_PASSWORD=""
+MYSQL_DATABASE=""
 BOT_TOKEN=""
-DB_USER=""
-DB_PASS=""
-DB_HOST=""
-DB_PORT=""
-DB_NAME=""
+DB_URI=""
+ROOT_ID=""
